--- a/_posts/0000-01-02-Juan-M-V.md
+++ b/_posts/0000-01-02-Juan-M-V.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Theory and practice are the same in theory but different in practice
 Use the left arrow to go back!
